[tool.poetry]
name = "video-app"
version = "0.1.0"
description = ""
authors = ["Davyd Ikkes <d.ikkes2010@gmail.com>"]
readme = "README.md"
packages = [{include = "video_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
